--- a/lib/src/core/l10n/arb/app_th.arb
+++ b/lib/src/core/l10n/arb/app_th.arb
@@ -11,5 +11,18 @@
   },
   "@myList": {
     "description": "ข้อความที่แสดงเป็นปุ่มหรือการกระทำสำหรับรายการของผู้ใช้"
+  },
+  "home": "หน้าหลัก",
+  "games": "เกม",
+  "newAndHot": "ใหม่และมาแรง",
+  "myNetflix": "Netflix ของฉัน",
+  "notifications": "การแจ้งเตือน",
+  "viewAll": "ดูทั้งหมด",
+  "switchProfile": "สลับโปรไฟล์",
+  "manageProfile": "จัดการโปรไฟล์",
+  "downloaded": "เนื้อหาดาวน์โหลด",
+  "downloadedDesc": "ภาพยนต์และรายการที่ดาวน์โหลดจะ\nปรากฏที่นี่",
+  "@downloaded": {
+    "description": "ภาพยนต์และรายการที่ดาวน์โหลดจะปรากฏที่นี่"
   }
 }
