--- a/lib/src/core/l10n/arb/app_th.arb
+++ b/lib/src/core/l10n/arb/app_th.arb
@@ -21,8 +21,16 @@
   "switchProfile": "สลับโปรไฟล์",
   "manageProfile": "จัดการโปรไฟล์",
   "downloaded": "เนื้อหาดาวน์โหลด",
-  "downloadedDesc": "ภาพยนต์และรายการที่ดาวน์โหลดจะ\nปรากฏที่นี่",
+  "downloadedDesc": "ภาพยนต์และรายการที่ดาวน์โหลด\nจะปรากฏที่นี่",
   "@downloaded": {
     "description": "ภาพยนต์และรายการที่ดาวน์โหลดจะปรากฏที่นี่"
-  }
+  },
+  "search": "ค้นหา",
+  "searchHint": "หาภาพยนต์, รายการทีวี, และอื่นๆ",
+  "@search": {
+    "description": "ข้อความที่แสดงในช่องค้นหา"
+  },
+  "loading": "กำลังโหลด...",
+  "error": "เกิดข้อผิดพลาด",
+  "retry": "ลองอีกครั้ง"
 }
