[fix] a lot of stuff

--- a/lib/src/core/l10n/arb/app_th.arb
+++ b/lib/src/core/l10n/arb/app_th.arb
@@ -32,5 +32,23 @@
   },
   "loading": "กำลังโหลด...",
   "error": "เกิดข้อผิดพลาด",
-  "retry": "ลองอีกครั้ง"
+  "retry": "ลองอีกครั้ง",
+  "login": "เข้าสู่ระบบ",
+  "logout": "ออกจากระบบ",
+  "settings": "การตั้งค่า",
+  "password": "รหัสผ่าน",
+  "invalidPassword": "รหัสผ่านไม่ถูกต้อง",
+  "username": "ชื่อผู้ใช้",
+  "invalidUsername": "ชื่อผู้ใช้ไม่ถูกต้อง",
+  "email": "อีเมล",
+  "forgotPassword": "ลืมรหัสผ่าน",
+  "dontHaveAnAccount": "ยังไม่มีบัญชี?",
+  "signUp": "สมัครสมาชิก",
+  "alreadyHaveAnAccount": "มีบัญชีอยู่แล้ว?",
+  "signIn": "เข้าสู่ระบบ",
+  "createAccount": "สร้างบัญชี",
+  "or": "หรือ",
+  "continueWith": "ดำเนินการต่อด้วย",
+  "authError": "เกิดข้อผิดพลาดในการยืนยันตัวตน",
+  "selectProfile": "เลือกผู้ชม"
 }
