--- a/lib/src/core/l10n/arb/app_en.arb
+++ b/lib/src/core/l10n/arb/app_en.arb
@@ -32,5 +32,23 @@
   },
   "loading": "Loading...",
   "error": "Error",
-  "retry": "Retry"
+  "retry": "Retry",
+  "login": "Log In",
+  "logout": "Log Out",
+  "settings": "Settings",
+  "password": "Password",
+  "invalidPassword": "Invalid Password",
+  "username": "Username",
+  "invalidUsername": "Invalid Username",
+  "email": "Email",
+  "forgotPassword": "Forgot Password",
+  "dontHaveAnAccount": "Don't have an account?",
+  "signUp": "Sign Up",
+  "alreadyHaveAnAccount": "Already have an account?",
+  "signIn": "Sign In",
+  "createAccount": "Create Account",
+  "or": "Or",
+  "continueWith": "Continue with",
+  "authError": "Authentication error",
+  "selectProfile": "Select profile"
 }
